--- a/style.css
+++ b/style.css
@@ -1,9 +1,210 @@
+* {
+  box-sizing: border-box;
+}
+
+html 
+{
+  height:100%;
+}
 body {
-    background-color: powderblue;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-width: 320px;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-family: 'Verdana', sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #4d2323;
 }
-h1 {
-    color: blue;
+
+.header {
+  background-color: #7f91b8;
+  width: 100%;
+  padding: 5px 0;
+  z-index: 100;
+  -webkit-box-shadow: 0 5px 25px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 5px 25px rgba(0, 0, 0, 0.15);
 }
-p {
-    color: red;
+
+.header_fixed {
+  position: fixed;
+  left: 0;
+  top: 0;
 }
+
+.menuList {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+}
+
+.itemLink {
+  position: relative;
+  padding: 0 12px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 50px;
+  color: #fff; 
+}
+
+.itemLink::after {
+  content: "";
+  position: absolute;
+  left: 12px;
+  bottom: -5px;
+  width: calc(100% - 24px);
+  height: 2px;
+  background-color: #fff;
+  opacity: 0;
+  transition: .5s;
+}
+
+.itemLink:hover::after {
+  opacity: 1;
+  animation-name: slidein;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+}
+
+.container {
+  max-width: 1440px;
+  margin: 0 auto;
+  min-height: 50px;
+}
+
+.section { 
+  padding: 10px;
+  border-bottom: 1px solid #672f2f;
+}
+.section-item {
+  position: relative;
+  margin: 0;
+  margin-bottom: 5px;
+  padding: 0;
+  padding-left: 30px;
+}
+
+.section-item::before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 2px;
+  width: 14px;
+  height: 14px; 
+  background-size: 14px 14px;
+  background-image: url("assets/svg/6.svg");
+}
+
+.section-languages {
+  border-bottom: 0;
+}
+
+.section-title {
+  margin-bottom: 10px;  
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  color: #385ba5;
+}
+
+.section-item span {
+  color: #385ba5;
+}
+
+.section-list {
+  margin: 0;
+  padding: 0;  
+  list-style: none;
+}
+
+.contacts-item:before {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 0px;
+  width: 24px;
+  height: 24px; 
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.contacts-item:nth-child(1):before {
+  background-image: url("assets/svg/1.svg");
+}
+
+.contacts-item:nth-child(2):before {
+  top: 3px;
+  left: 0px;
+  width: 21px;
+  height: 21px;
+  background-image: url("assets/svg/2.svg");
+}
+
+.contacts-item:nth-child(3):before {
+  top: 4px;
+  left: 0px;
+  width: 19px;
+  height: 19px;
+  background-image: url("assets/svg/3.svg");
+}
+
+.contacts-item:nth-child(4):before {
+  top: 3px;
+  left: 0px;
+  width: 21px;
+  height: 21px;
+  background-image: url("assets/svg/4.svg");
+}
+
+.contacts-item:nth-child(5):before {
+  background-image: url("assets/svg/5.svg");
+}
+
+.pre {
+  padding: 0;
+  margin: 0;
+}
+
+.github-project:nth-child(1):before {
+  background-image: url("assets/svg/3.svg");
+}
+
+.github-project:nth-child(2):before {
+  background-image: url("assets/svg/3.svg");
+}
+
+
+.footer {
+  background-color: #7f91b8;
+  padding: 20px;  
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  color: #fff;
+}
+
+.github {
+  color: #dd1010;
+  text-decoration: none;
+  line-height: 45px;
+}
+
+.rss {
+  width: 121px;
+  height: 45px;
+  background-image: url("./assets/svg/rss.svg");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
