--- a/style.css
+++ b/style.css
@@ -200,10 +200,10 @@ body {
   line-height: 45px;
 }
 
-.rss {
+.rss img {
   width: 121px;
   height: 45px;
-  background-image: url("./assets/svg/rss.svg");
+  /* background-image: url("./assets/svg/rss.svg"); */
   background-size: contain;
   background-repeat: no-repeat;
 }
